Bug 356550 - Show dangling annotation in problems view